# compressed-emoji-shortcodes

./: .gitignore  Cargo.toml  README.md  build.rs  oversized_emoji.txt  raw_emoji.txt  raw_shortcodes.txt  sample_codegen.rs
collision-test/: Cargo.toml
collision-test/src/: main.rs
docs/: 0.bootstrap.js  bootstrap.js  index.html
example_no_std/: Cargo.toml  check_size.sh
example_no_std/.cargo/: config
example_no_std/src/: main.rs
kowalski-analysis/: Cargo.toml  README.md
kowalski-analysis/src/: main.rs
rust-phf/: Cargo.toml
rust-phf/phf/: Cargo.toml
rust-phf/phf/src/: lib.rs  map.rs
rust-phf/phf_codegen/src/: lib.rs
rust-phf/phf_generator/src/: lib.rs
rust-phf/phf_shared/: Cargo.toml
rust-phf/phf_shared/src/: lib.rs
shortcode-web/: Cargo.toml
shortcode-web/src/: lib.rs
shortcode-web/www/: index.html  index.js  package-lock.json  package.json
src/: lib.rs
