[package]
name = "maximally-compressed-emoji-shortcodes"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[dependencies]
phf = { path = "./rust-phf/phf", default-features = false }

[build-dependencies]
phf_codegen = { path = "./rust-phf/phf_codegen/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
